# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  License  README.md  build_ogre_linux_c++latest.sh  lol  r-type.bat  r-type.sh
.github/workflows/: compil.yml  doc.yml  rtype_ci.yml
Cmake-Modules/: FindAsio.cmake  FindBoost.cmake  FindSFML.cmake
R-Type/: Engine.cpp  Engine.hpp  Includes.hpp  main.cpp
R-Type/Assets/Levels/: Level1.txt  Level2.txt
R-Type/Client/: Client.cpp  Client.hpp  ClientNetwork.cpp  ClientNetwork.hpp  GameSerializer.cpp  GameSerializer.hpp  MenuSerializer.cpp  MenuSerializer.hpp  main.cpp
R-Type/Component/: Component.cpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentTypes.hpp
R-Type/ECS/: Engine.cpp  Engine.hpp  Game.cpp  Game.hpp
R-Type/ECS/Component/: Component.cpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentTypes.hpp
R-Type/ECS/Entity/: EntityManager.cpp  EntityManager.hpp
R-Type/ECS/System/: ISystem.hpp  SystemManager.cpp  SystemManager.hpp
R-Type/Engine/: Engine.cpp  Engine.hpp
R-Type/Engine/ECS/: ECS.cpp  ECS.hpp
R-Type/Engine/Graphic/: Graphic.cpp  Graphic.hpp
R-Type/Engine/Input/: Input.cpp  Input.hpp
R-Type/Engine/Level/: Level.cpp  Level.hpp
R-Type/Engine/Loader/: Loader.cpp  Loader.hpp
R-Type/Engine/Network/: Connection.cpp  Connection.hpp  GameSerializer.cpp  GameSerializer.hpp  MenuSerializer.cpp  MenuSerializer.hpp  NetCommon.hpp  Network.cpp  Network.hpp  Queue.hpp  Room.cpp  Room.hpp  Serializer.cpp  Serializer.hpp
R-Type/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
R-Type/Graphic/: Graphic.cpp  Graphic.hpp
R-Type/ImGui/: imgui_draw.cpp
R-Type/Network/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Message.hpp  NetCommon.hpp  Server.cpp  Server.hpp  client.cpp  client.hpp  common.hpp  connection.hpp  makefile  message.hpp  network.puml  queue.cpp  queue.hpp  testCli.cpp  testServ.cpp
R-Type/Server/: Client.cpp  Client.hpp  GameSerializer.cpp  GameSerializer.hpp  MenuSerializer.cpp  MenuSerializer.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp  ServerGameSerializer.cpp  ServerGameSerializer.hpp  ServerMenuSerializer.cpp  ServerMenuSerializer.hpp  ServerNetwork.cpp  ServerNetwork.hpp  main.cpp
R-Type/System/: ASystem.hpp  ISystem.hpp  ModelIdSystem.cpp  ModelIdSystem.hpp  PhysicSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  SystemManager.cpp  SystemManager.hpp
R-Type/System/Physic/: PhysicSystem.hpp
R-Type/System/Render/: RenderSystem.hpp
R-Type/client/: CMakeLists.txt  main.cpp
R-Type/graphic/: Graphic.cpp  Graphic.hpp
R-Type/server/: CMakeLists.txt  main.cpp
cmake_modules/: FindAsio.cmake  FindSFML.cmake  Findogre-next-deps.cmake  Findogre-next.cmake
doc/: Doxyfile  generate.sh
doc/doxygen/: Doxyfile  doc.dockerfile  generate.sh
doc/html/: AnimationSystem_8hpp.html  AnimationSystem_8hpp_source.html  BackgroundMusicPreload_8hpp.html  BackgroundMusicPreload_8hpp_source.html  BossPreload_8hpp.html  BossPreload_8hpp__dep__incl.map  BossPreload_8hpp__dep__incl.md5  BossPreload_8hpp_source.html  ClickSystem_8hpp.html  ClickSystem_8hpp_source.html  ClientNetwork_8hpp.html  ClientNetwork_8hpp_source.html  Client_2Client_8hpp.html  Client_2Client_8hpp_source.html  Client_2GameSerializer_8hpp.html  Client_2GameSerializer_8hpp_source.html  Client_2MenuSerializer_8hpp.html  Client_2MenuSerializer_8hpp_source.html  Client_2main_8cpp.html  Client_8hpp.html  Client_8hpp_source.html  ComponentManager_8hpp.html  ComponentManager_8hpp__dep__incl.map  ComponentManager_8hpp__dep__incl.md5  ComponentManager_8hpp_source.html  ComponentTypes_8hpp.html  ComponentTypes_8hpp_source.html  Connection_8hpp.html  Connection_8hpp__dep__incl.map  Connection_8hpp__dep__incl.md5  Connection_8hpp_source.html  CooldownBarPreload_8hpp.html  CooldownBarPreload_8hpp_source.html  CthulhuPreload_8hpp.html  CthulhuPreload_8hpp__dep__incl.map  CthulhuPreload_8hpp__dep__incl.md5  CthulhuPreload_8hpp_source.html  DevourerOfGodsPreload_8hpp.html  DevourerOfGodsPreload_8hpp__dep__incl.map  DevourerOfGodsPreload_8hpp__dep__incl.md5  (+1356 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+82 more)
doc/mapLoader/: README.md
doc/networkProtocol/: README.md
html/: _animation_system_8hpp.html  _animation_system_8hpp_source.html  _background_music_preload_8hpp.html  _background_music_preload_8hpp__dep__incl.map  _background_music_preload_8hpp__dep__incl.md5  _background_music_preload_8hpp_source.html  _boss_preload_8cpp.html  _boss_preload_8cpp_source.html  _boss_preload_8hpp.html  _boss_preload_8hpp__dep__incl.map  _boss_preload_8hpp__dep__incl.md5  _boss_preload_8hpp_source.html  _client_2main_8cpp.html  _client_2main_8cpp_source.html  _client_8hpp.html  _client_8hpp_source.html  _client_network_8hpp.html  _client_network_8hpp_source.html  _component_8cpp.html  _component_8cpp_source.html  _component_8hpp.html  _component_8hpp__dep__incl.dot  _component_8hpp_source.html  _component_manager_8cpp.html  _component_manager_8cpp_source.html  _component_manager_8hpp.html  _component_manager_8hpp__dep__incl.dot  _component_manager_8hpp__dep__incl.map  _component_manager_8hpp__dep__incl.md5  _component_manager_8hpp_source.html  _component_types_8hpp.html  _component_types_8hpp_source.html  _connection_8hpp.html  _connection_8hpp__dep__incl.map  _connection_8hpp__dep__incl.md5  _connection_8hpp_source.html  _cooldown_bar_preload_8cpp.html  _cooldown_bar_preload_8cpp_source.html  _cooldown_bar_preload_8hpp.html  _cooldown_bar_preload_8hpp__dep__incl.map  (+1275 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  defines_1.js  (+86 more)
(+90 files in other folders)
